# simple_state_machine

./: Cargo.toml  README.md
src/: lib.rs
src/state_defs/: state_master.rs
src/state_defs/trait_defs/: start_state.rs  state.rs
